<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".TimeForMeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_person_to_meet"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:elevation="4dp"
        app:cardCornerRadius="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_view_icon_person_to_meet"
                style="@style/Icon"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:src="@drawable/icon_person"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_heading_person_to_meet"
                style="@style/HeadingsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="6dp"
                android:text="@string/text_view_heading_person_to_meet"
                app:layout_constraintLeft_toRightOf="@id/image_view_icon_person_to_meet"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_input_person_to_meet"
                style="@style/InputTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                app:layout_constraintStart_toStartOf="@id/text_view_heading_person_to_meet"
                app:layout_constraintTop_toBottomOf="@id/text_view_heading_person_to_meet"
                tools:text="Example Person" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_person_to_call"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:elevation="4dp"
        app:cardCornerRadius="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_view_icon_person_to_call"
                style="@style/Icon"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:src="@drawable/icon_call"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_heading_person_to_call"
                style="@style/HeadingsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="6dp"
                android:text="@string/text_view_heading_person_to_call"
                app:layout_constraintLeft_toRightOf="@id/image_view_icon_person_to_call"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_input_person_to_call"
                style="@style/InputTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                app:layout_constraintStart_toStartOf="@id/text_view_heading_person_to_call"
                app:layout_constraintTop_toBottomOf="@id/text_view_heading_person_to_call"
                tools:text="Example Person" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_place_to_visit"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:elevation="4dp"
        app:cardCornerRadius="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_view_icon_place_to_visit"
                style="@style/Icon"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:src="@drawable/icon_place"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_heading_place_to_visit"
                style="@style/HeadingsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="6dp"
                android:text="@string/text_view_heading_place_to_visit"
                app:layout_constraintLeft_toRightOf="@id/image_view_icon_place_to_visit"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_input_place_to_visit"
                style="@style/InputTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                app:layout_constraintStart_toStartOf="@id/text_view_heading_place_to_visit"
                app:layout_constraintTop_toBottomOf="@id/text_view_heading_place_to_visit"
                tools:text="Example place" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_family_time_to_spend"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:elevation="4dp"
        app:cardCornerRadius="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_view_icon_family_time_to_spend"
                style="@style/Icon"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:src="@drawable/icon_family"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_heading_family_time_to_spend"
                style="@style/HeadingsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="6dp"
                android:text="@string/text_view_heading_family_time_to_spend"
                app:layout_constraintLeft_toRightOf="@id/image_view_icon_family_time_to_spend"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_input_family_time_to_spend"
                style="@style/InputTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                app:layout_constraintStart_toStartOf="@id/text_view_heading_family_time_to_spend"
                app:layout_constraintTop_toBottomOf="@id/text_view_heading_family_time_to_spend"
                tools:text="Example time" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>